--- a/.lh/src/renderer/src/components/Editor/hooks/useConfig.ts.json
+++ b/.lh/src/renderer/src/components/Editor/hooks/useConfig.ts.json
@@ -3,7 +3,7 @@
     "activeCommit": 0,
     "commits": [
         {
-            "activePatchIndex": 70,
+            "activePatchIndex": 71,
             "patches": [
                 {
                     "date": 1665632485404,
@@ -288,6 +288,10 @@
                 {
                     "date": 1666589885274,
                     "content": "Index: \n===================================================================\n--- \n+++ \n@@ -22,10 +22,8 @@\n         })\n         .updated(() => {\n           console.log('when editor state updates')\n         })\n-        // 点击文件列表后会两次调用，导致第一次渲染标题的时候还是旧的\n-        .markdownUpdated(() => {})\n         .blur(() => {\n         })\n         .focus(() => {\n           console.log(' when focus editor')\n"
+                },
+                {
+                    "date": 1666637976939,
+                    "content": "Index: \n===================================================================\n--- \n+++ \n@@ -1,8 +1,8 @@\n import { defaultValueCtx, Editor, rootCtx } from '@milkdown/core'\n import { listenerCtx } from '@milkdown/plugin-listener'\n \n-export const useConfig = (editor: Editor, root: HTMLElement) => {\n+export const useConfig = (editor: Editor, root: HTMLElement,setMarkdown:Function) => {\n   editor\n     .config((ctx) => {\n       ctx.set(rootCtx, root)\n     })\n@@ -19,13 +19,16 @@\n         })\n         .mounted(() => {\n           console.log('after the editor mounts')\n         })\n+        .markdownUpdated((ctx,markdown)=>{\n+          console.log('markdownUpdated')\n+          setMarkdown(markdown)\n+        })\n         .updated(() => {\n           console.log('when editor state updates')\n         })\n-        .blur(() => {\n-        })\n+        .blur(() => {})\n         .focus(() => {\n           console.log(' when focus editor')\n         })\n         .destroy(() => {\n"
                 }
             ],
             "date": 1665632485404,
