--- a/tsconfig.web.json
+++ b/tsconfig.web.json
@@ -10,6 +10,7 @@
   "compilerOptions": {
     "composite": true,
     "jsx": "react-jsx",
+    "baseUrl": "./",
     "paths": {
       "@renderer/*": [
         "src/renderer/src/*"
