--- a/.lh/src/renderer/src/components/Editor/hooks/useConfig.ts.json
+++ b/.lh/src/renderer/src/components/Editor/hooks/useConfig.ts.json
@@ -3,7 +3,7 @@
     "activeCommit": 0,
     "commits": [
         {
-            "activePatchIndex": 71,
+            "activePatchIndex": 72,
             "patches": [
                 {
                     "date": 1665632485404,
@@ -292,6 +292,10 @@
                 {
                     "date": 1666637976939,
                     "content": "Index: \n===================================================================\n--- \n+++ \n@@ -1,8 +1,8 @@\n import { defaultValueCtx, Editor, rootCtx } from '@milkdown/core'\n import { listenerCtx } from '@milkdown/plugin-listener'\n \n-export const useConfig = (editor: Editor, root: HTMLElement) => {\n+export const useConfig = (editor: Editor, root: HTMLElement,setMarkdown:Function) => {\n   editor\n     .config((ctx) => {\n       ctx.set(rootCtx, root)\n     })\n@@ -19,13 +19,16 @@\n         })\n         .mounted(() => {\n           console.log('after the editor mounts')\n         })\n+        .markdownUpdated((ctx,markdown)=>{\n+          console.log('markdownUpdated')\n+          setMarkdown(markdown)\n+        })\n         .updated(() => {\n           console.log('when editor state updates')\n         })\n-        .blur(() => {\n-        })\n+        .blur(() => {})\n         .focus(() => {\n           console.log(' when focus editor')\n         })\n         .destroy(() => {\n"
+                },
+                {
+                    "date": 1667210968948,
+                    "content": "Index: \n===================================================================\n--- \n+++ \n@@ -1,8 +1,9 @@\n import { defaultValueCtx, Editor, rootCtx } from '@milkdown/core'\n import { listenerCtx } from '@milkdown/plugin-listener'\n+import { useUpdateHeaders } from '@renderer/components/SideBar/hooks/useUpdateHeader'\n \n-export const useConfig = (editor: Editor, root: HTMLElement,setMarkdown:Function) => {\n+export const useConfig = (editor: Editor, root: HTMLElement, setMarkdown: Function) => {\n   editor\n     .config((ctx) => {\n       ctx.set(rootCtx, root)\n     })\n@@ -19,11 +20,12 @@\n         })\n         .mounted(() => {\n           console.log('after the editor mounts')\n         })\n-        .markdownUpdated((ctx,markdown)=>{\n+        .markdownUpdated((ctx, markdown) => {\n           console.log('markdownUpdated')\n           setMarkdown(markdown)\n+          useUpdateHeaders()\n         })\n         .updated(() => {\n           console.log('when editor state updates')\n         })\n"
                 }
             ],
             "date": 1665632485404,
