--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "typecheck": "npm run typecheck:node && npm run typecheck:web",
     "start": "electron-vite preview",
     "dev": "electron-vite dev",
-    "build": "npm run typecheck && electron-vite build",
+    "build": "electron-vite build",
     "postinstall": "electron-builder install-app-deps",
     "build:win": "npm run build && electron-builder --win --config",
     "build:mac": "electron-vite build && electron-builder --mac --config",
@@ -46,7 +46,7 @@
     "@typescript-eslint/parser": "^5.39.0",
     "@vitejs/plugin-react": "^2.1.0",
     "electron": "^20.3.2",
-    "electron-builder": "^22.14.13",
+    "electron-builder": "^23.0.2",
     "electron-notarize": "^1.2.1",
     "electron-vite": "^1.0.10",
     "eslint": "^8.24.0",
