--- a/.lh/src/renderer/src/App.tsx.json
+++ b/.lh/src/renderer/src/App.tsx.json
@@ -3,7 +3,7 @@
     "activeCommit": 0,
     "commits": [
         {
-            "activePatchIndex": 22,
+            "activePatchIndex": 23,
             "patches": [
                 {
                     "date": 1667537076910,
@@ -96,6 +96,10 @@
                 {
                     "date": 1667643334733,
                     "content": "Index: \n===================================================================\n--- \n+++ \n@@ -9,17 +9,19 @@\n \n export const App = () => {\n   const [filePath, setFilePath] = useState('untitle')\n   const [content, setContent] = useState('')\n+  const [title,setTitle] = useState('untitle')\n   useEffect(() => {\n-    window.api.onMain(OPEN_FILE, (_e, { filePath, fileContent }) => {\n+    window.api.onMain(OPEN_FILE, (_e, { filePath, fileContent,fileName }) => {\n       setFilePath(filePath)\n       setContent(fileContent)\n+      setTitle(fileName)\n     })\n   }, [])\n   return (\n     <div className=\"container\">\n-      <Header title={filePath} />\n+      <Header title={title} />\n       <main>\n         <SideBar />\n         <MilkdownEditor content={content} filePath={filePath} />\n       </main>\n"
+                },
+                {
+                    "date": 1667667270041,
+                    "content": "Index: \n===================================================================\n--- \n+++ \n@@ -3,8 +3,9 @@\n \n \n \n import { MilkdownEditor } from './components/Editor'\n+import { GlobalComponents } from './components/Global'\n import { Header } from './components/Header'\n import { SideBar } from './components/SideBar'\n \n export const App = () => {\n@@ -24,7 +25,8 @@\n       <main>\n         <SideBar />\n         <MilkdownEditor content={content} filePath={filePath} />\n       </main>\n+      <GlobalComponents/>\n     </div>\n   )\n }\n"
                 }
             ],
             "date": 1667537076910,
