--- a/.lh/src/renderer/src/components/Editor/hooks/useConfig.ts.json
+++ b/.lh/src/renderer/src/components/Editor/hooks/useConfig.ts.json
@@ -3,7 +3,7 @@
     "activeCommit": 0,
     "commits": [
         {
-            "activePatchIndex": 9,
+            "activePatchIndex": 12,
             "patches": [
                 {
                     "date": 1667540446836,
@@ -44,6 +44,18 @@
                 {
                     "date": 1667807444521,
                     "content": "Index: \n===================================================================\n--- \n+++ \n@@ -1,9 +1,9 @@\n import { defaultValueCtx, Editor, rootCtx } from '@milkdown/core'\n import { listenerCtx } from '@milkdown/plugin-listener'\n import { debounce } from 'debounce'\n export const useConfig = (editor: Editor, root: HTMLElement, setMarkdown: Function) => {\n-  const x = debounce(setMarkdown,1000,false)\n+  const debounceSet = debounce(setMarkdown, 1000, false)\n   editor\n     .config((ctx) => {\n       ctx.set(rootCtx, root)\n     })\n@@ -18,9 +18,9 @@\n         .beforeMount(() => {})\n         .mounted(() => {})\n         .markdownUpdated((_ctx, markdown) => {\n           console.log('markdownUpdated')\n-          x(markdown)\n+          debounceSet(markdown)\n         })\n         .updated(() => {})\n         .blur(() => {})\n         .focus(() => {})\n"
+                },
+                {
+                    "date": 1668070182447,
+                    "content": "Index: \n===================================================================\n--- \n+++ \n@@ -1,9 +1,9 @@\n import { defaultValueCtx, Editor, rootCtx } from '@milkdown/core'\n import { listenerCtx } from '@milkdown/plugin-listener'\n import { debounce } from 'debounce'\n export const useConfig = (editor: Editor, root: HTMLElement, setMarkdown: Function) => {\n-  const debounceSet = debounce(setMarkdown, 1000, false)\n+  const debounceSet = debounce(setMarkdown, 500, true)\n   editor\n     .config((ctx) => {\n       ctx.set(rootCtx, root)\n     })\n"
+                },
+                {
+                    "date": 1668333779982,
+                    "content": "Index: \n===================================================================\n--- \n+++ \n@@ -1,9 +1,9 @@\n import { defaultValueCtx, Editor, rootCtx } from '@milkdown/core'\n import { listenerCtx } from '@milkdown/plugin-listener'\n import { debounce } from 'debounce'\n export const useConfig = (editor: Editor, root: HTMLElement, setMarkdown: Function) => {\n-  const debounceSet = debounce(setMarkdown, 500, true)\n+  const debounceSet = debounce(setMarkdown, 1500, true)\n   editor\n     .config((ctx) => {\n       ctx.set(rootCtx, root)\n     })\n"
+                },
+                {
+                    "date": 1668333930022,
+                    "content": "Index: \n===================================================================\n--- \n+++ \n@@ -1,9 +1,9 @@\n import { defaultValueCtx, Editor, rootCtx } from '@milkdown/core'\n import { listenerCtx } from '@milkdown/plugin-listener'\n import { debounce } from 'debounce'\n export const useConfig = (editor: Editor, root: HTMLElement, setMarkdown: Function) => {\n-  const debounceSet = debounce(setMarkdown, 1500, true)\n+  const debounceSet = debounce(setMarkdown, 1500, false)\n   editor\n     .config((ctx) => {\n       ctx.set(rootCtx, root)\n     })\n"
                 }
             ],
             "date": 1667540446836,
