--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "electron-updater": "^4.6.5",
     "path-browserify": "^1.0.1",
     "prism-themes": "^1.9.0",
-    "sass": "^1.56.0"
+    "sass": "^1.56.0",
+    "translation": "^0.0.3"
   },
   "devDependencies": {
     "@electron-toolkit/tsconfig": "^1.0.1",
